create alfacrm integration

--- a/node/config.yaml
+++ b/node/config.yaml
@@ -15,8 +15,8 @@ uc_flow_node:
   register_on_start: false
   execute_view_queue_size: 500
   execute_view_workers: 5
-  private_url: https://818b-5-189-94-93.ngrok-free.app
-  public_url: https://818b-5-189-94-93.ngrok-free.app
+  private_url: https://758a-5-189-94-93.ngrok-free.app
+  public_url: https://758a-5-189-94-93.ngrok-free.app
   uc_flow:
     domain: https://uc-flow-v2-pp-api.comagic.ru
     jwt_secret: 9109a79d-74f9-45bd-b369-5e7a885421e5
