--- a/node/config.yaml
+++ b/node/config.yaml
@@ -1,4 +1,4 @@
-service_name: '6f0f309e-5451-4a62-8a3a-7bca5404e6f8'
+service_name: 'd3b4f0cf-8e2e-46c0-bad3-a925179792c3'
 
 http:
   url: http://0.0.0.0:9000
@@ -15,8 +15,8 @@ uc_flow_node:
   register_on_start: false
   execute_view_queue_size: 500
   execute_view_workers: 5
-  private_url: https://ce43-5-189-94-93.ngrok-free.app
-  public_url: https://ce43-5-189-94-93.ngrok-free.app
+  private_url: https://a015-5-189-94-93.ngrok-free.app
+  public_url: https://a015-5-189-94-93.ngrok-free.app
   uc_flow:
     domain: https://uc-flow-v2-pp-api.comagic.ru
     jwt_secret: 9109a79d-74f9-45bd-b369-5e7a885421e5
